# dynamic-template

./: AGENTS.md  Cargo.toml
crates/: readme.md
crates/color-palette/: Cargo.toml
crates/dynamic-template/: AGENTS.md  Cargo.toml  NAMING_GUIDELINES.md
crates/dynamic-template-extension/: Cargo.toml
crates/dynamic-template-extension/src/: main.rs
crates/dynamic-template-proto/: Cargo.toml
crates/dynamic-template-proto/src/: actions.rs  error.rs  lib.rs  services.rs  types.rs
crates/dynamic-template-proto/src/auto_color/: actions.rs  mod.rs
crates/dynamic-template-proto/src/visibility_manager/: actions.rs  mod.rs
crates/dynamic-template/src/: auto_color.rs  colors.rs  daw_module.rs  equipment.rs  error.rs  icons.rs  item_metadata.rs  layouts.rs  lib.rs  main.rs  metadata_patterns.rs  protools.rs  song_name.rs  tempo.rs
crates/dynamic-template/src/groups/: mod.rs
crates/dynamic-template/src/groups/bass/: bass_guitar.rs  mod.rs  synth_bass.rs  upright_bass.rs
crates/dynamic-template/src/groups/choir/: mod.rs
crates/dynamic-template/src/groups/drums/: mod.rs
crates/dynamic-template/src/groups/drums/drum_kit/: cymbals.rs  kick.rs  mod.rs  room.rs  snare.rs  tom.rs
crates/dynamic-template/src/groups/drums/electronic_kit/: kick.rs  mod.rs  snare.rs
crates/dynamic-template/src/groups/fx/: delay.rs  distortion.rs  dynamics.rs  eq.rs  mod.rs  modulation.rs  pitch.rs  reverb.rs
crates/dynamic-template/src/groups/guide/: mod.rs
crates/dynamic-template/src/groups/guitars/: acoustic_guitar.rs  banjo.rs  electric_guitar.rs  example-guitar.md  mandolin.rs  mod.rs  steel_guitar.rs
crates/dynamic-template/src/groups/harmonica/: mod.rs
crates/dynamic-template/src/groups/horns/: bass_trombone.rs  mod.rs  saxophone.rs  trombone.rs  trumpet.rs  tuba.rs
crates/dynamic-template/src/groups/keys/: accordion.rs  clavichord.rs  electric_keys.rs  harpsichord.rs  melodica.rs  mod.rs  organ.rs  piano.rs
crates/dynamic-template/src/groups/orchestra/: brass.rs  harp.rs  mod.rs  percussion.rs  strings.rs  woodwinds.rs
crates/dynamic-template/src/groups/orchestra/brass/: horns.rs  trumpets.rs  tuba.rs
crates/dynamic-template/src/groups/orchestra/brass/trombones/: bass_trombone.rs  mod.rs  trombone.rs
crates/dynamic-template/src/groups/orchestra/strings/: cello.rs  contrabass.rs  viola.rs  violins.rs
crates/dynamic-template/src/groups/orchestra/strings/violins/: first_violin.rs  second_violin.rs
crates/dynamic-template/src/groups/orchestra/woodwinds/: bassoons.rs  clarinets.rs  flutes.rs  oboes.rs  piccolo.rs
crates/dynamic-template/src/groups/percussion/: mod.rs
crates/dynamic-template/src/groups/reference/: mod.rs
crates/dynamic-template/src/groups/sfx/: mod.rs
crates/dynamic-template/src/groups/stem_split/: mod.rs
crates/dynamic-template/src/groups/strings/: mod.rs
crates/dynamic-template/src/groups/synths/: arp.rs  chord.rs  fx.rs  keys.rs  lead.rs  mod.rs  pad.rs
crates/dynamic-template/src/groups/vocals/: background_vocals.rs  lead_vocals.rs  mod.rs  sorting-plan.md
crates/dynamic-template/tests/: 01_no_unneccesary_folders.rs  02_scoped_resorting.rs  03_assertion_sensitivity.rs  04_visibility_classification.rs  05_auto_color.rs  multitrack_examples.rs
crates/dynamic-template/tests/multitrack_examples/: beatles_day_tripper.rs  beatles_dont_let_me_down.rs  beatles_girl.rs  carter_thomas_ryder.rs  chad_burton_nashville.rs  cyndi_lauper_time_after_time.rs  derek_and_the_dominos_layla.rs  gloria_anderson_households.rs  iron_maiden_the_trooper.rs  james_dupre_another_love_song.rs  jared_james_nichols.rs  katie_ferrara_how_deep_is_your_love.rs  katie_ferrara_valerie.rs  laura_clapp_davidson_hey_hey_sister.rs  led_zeppelin_the_ocean.rs  marc_martel_dont_stop_me_now.rs  mars_sws.rs  michael_humphries_radius.rs  neil_young_heart_of_gold.rs  roswell_aint_no_sunshine.rs  steve_maggiora_bring_it_on_back.rs  steve_maggiora_hey_lady.rs  steve_maggiora_its_too_late.rs  tears_for_fears_shout.rs  the_cure_friday_im_in_love.rs
crates/music-catalog/: Cargo.toml
tests/: 02_scoped_resorting.rs  05_auto_color.rs  Cargo.toml  example.md  multitrack_examples.rs
tests/multitrack_examples/: adam_buckley_drag_me_down.rs  allman_brothers_whipping_post.rs  beatles_dont_let_me_down.rs  beatles_girl.rs  beatles_within_you_without_you.rs  beethoven_symphony.rs  ben_carrigan_hey_carrie_anne.rs  bon_jovi_you_give_love_a_bad_name.rs  bonelli_ballad_for_laura.rs  boston_more_than_a_feeling.rs  carter_thomas_ryder.rs  chad_burton_nashville.rs  cherry_poppin_daddies_zoot_suit.rs  def_leppard_pour_some_sugar.rs  def_leppard_rock_of_ages.rs  derek_and_the_dominos_layla.rs  eagles_hotel_california.rs  ej_rios_echo.rs  enda_reilly_cur_an_long.rs  entwistle_dont_you_ever.rs  family_band_again.rs  fusion_jazz_sextet.rs  gloria_anderson_households.rs  gospel_session.rs  grieg_mountain_king.rs  helado_negro_mitad.rs  hezekiah_jones_borrowed_heart.rs  iron_maiden_the_trooper.rs  james_may_eliza_jane.rs  jared_james_nichols.rs  journey_dont_stop_believin.rs  karim_douaidy_hopscotch.rs  katie_ferrara_how_deep_is_your_love.rs  katie_ferrara_valerie.rs  laura_clapp_davidson_hey_hey_sister.rs  led_zeppelin_the_ocean.rs  lushlife_toynbee_suite.rs  marc_martel_dont_stop_me_now.rs  mars_sws.rs  marvin_gaye_whats_going_on.rs  (+26 more)
tests/multitrack_examples/snapshots/: multitrack_examples__multitrack_examples__beatles_day_tripper__beatles_day_tripper.snap  multitrack_examples__multitrack_examples__bon_jovi_you_give_love_a_bad_name__bon_jovi_you_give_love_a_bad_name.snap  multitrack_examples__multitrack_examples__bon_jovi_you_give_love_a_bad_name__bon_jovi_you_give_love_a_bad_name.snap.new  multitrack_examples__multitrack_examples__neil_young_heart_of_gold__neil_young_heart_of_gold.snap  multitrack_examples__multitrack_examples__neil_young_heart_of_gold__neil_young_heart_of_gold.snap.new  multitrack_examples__multitrack_examples__stevie_wonder_superstition__stevie_wonder_superstition.snap  multitrack_examples__multitrack_examples__stevie_wonder_superstition__stevie_wonder_superstition.snap.new
(+11 files in other folders)
