[workspace]
members = ["crates/*", "tests"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["FastTrack Studio"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Internal crates
color-palette = { path = "crates/color-palette" }
dynamic-template-proto = { path = "crates/dynamic-template-proto" }
dynamic-template = { path = "crates/dynamic-template" }

# Monarchy hierarchy framework
monarchy = { git = "https://github.com/FastTrackStudios/monarchy.git", branch = "main" }

# Facet reflection framework — matches monarchy's facet version
facet = "0.44"
facet-core = "0.44"
facet-format = "0.44"
facet-json = "0.44"
facet-value = "0.44"

# ROAM service framework (pinned — latest main needs peeps sub-crates not yet published)
roam = { git = "https://github.com/bearcove/roam.git", branch = "main" }

# Sibling repos (local paths)
daw-proto = { path = "../daw/crates/daw-proto" }
daw-standalone = { path = "../daw/crates/daw-standalone" }
actions-proto = { path = "../input_actions/crates/actions-proto" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
anyhow = "1.0"

# Async runtime
tokio = { version = "1.48", features = ["full"] }

[workspace.lints.rust]
unused = "warn"
dead_code = "allow"
