[workspace]
members = ["crates/*", "tests", "xtask"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["FastTrack Studio"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Internal crates
color-palette = { path = "crates/color-palette" }
music-catalog = { path = "crates/music-catalog" }
dynamic-template-proto = { path = "crates/dynamic-template-proto" }
dynamic-template = { path = "crates/dynamic-template" }

# Monarchy hierarchy framework
monarchy = { git = "https://github.com/FastTrackStudios/monarchy.git", branch = "main" }

# Facet reflection framework — matches monarchy's facet version
facet = "0.44"
facet-core = "0.44"
facet-format = "0.44"
facet-json = "0.44"
facet-value = "0.44"

# ROAM service framework (pinned — latest main needs peeps sub-crates not yet published)
vox = { git = "https://github.com/bearcove/vox.git", rev = "53bff48" }

# Sibling repos
daw = { git = "https://github.com/FastTrackStudios/daw.git", branch = "main" }
daw-proto = { git = "https://github.com/FastTrackStudios/daw.git", branch = "main" }
daw-standalone = { git = "https://github.com/FastTrackStudios/daw.git", branch = "main" }
daw-extension-runtime = { git = "https://github.com/FastTrackStudios/daw.git", branch = "main" }
actions-proto = { git = "https://github.com/FastTrackStudios/input_actions.git", branch = "main" }

# Testing
reaper-test = { git = "https://github.com/FastTrackStudios/daw.git", branch = "main" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
anyhow = "1.0"

# Async runtime
tokio = { version = "1.48", features = ["full"] }

# Observability
tracing = { version = "0.1", features = ["std"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
eyre = "0.6"

# ── Local development overrides ──────────────────────────────────────
# Uncomment for local development:
# [patch."https://github.com/FastTrackStudios/daw.git"]
# daw = { path = "../daw/crates/daw" }
# daw-proto = { path = "../daw/crates/daw-proto" }
# daw-control = { path = "../daw/crates/daw-control" }
# daw-extension-runtime = { path = "../daw/crates/daw-extension-runtime" }
# fts-devtools = { path = "../daw/crates/fts-devtools" }
#
# [patch."https://github.com/FastTrackStudios/input_actions.git"]
# actions-proto = { path = "../input_actions/crates/actions-proto" }

# ── Vendored patches ──────────────────────────────────────────────────
# moire: unify crates.io moire with the git rev that vox pulls in,
# avoiding duplicate moire-runtime #[ctor] registrations that crash.
[patch.crates-io]
moire = { git = "https://github.com/bearcove/moire", rev = "13eac79" }
moire-macros-noop = { git = "https://github.com/bearcove/moire", rev = "13eac79" }
moire-runtime = { git = "https://github.com/bearcove/moire", rev = "13eac79" }
moire-tokio = { git = "https://github.com/bearcove/moire", rev = "13eac79" }
moire-trace-types = { git = "https://github.com/bearcove/moire", rev = "13eac79" }
moire-types = { git = "https://github.com/bearcove/moire", rev = "13eac79" }
moire-wasm = { git = "https://github.com/bearcove/moire", rev = "13eac79" }
moire-wire = { git = "https://github.com/bearcove/moire", rev = "13eac79" }

[workspace.lints.rust]
unused = "warn"
dead_code = "allow"
