[package]
name = "dynamic-template-proto"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Protocol types and service definitions for dynamic template organization"
keywords = ["template", "dynamic", "hierarchy", "organization", "daw"]
categories = ["multimedia::audio"]

[dependencies]
facet = { workspace = true }
daw-proto = { workspace = true }
vox = { workspace = true }
thiserror = { workspace = true }
actions-proto = { workspace = true }

[lints]
workspace = true
