[package]
name = "dynamic-template"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Dynamic template system using monarchy for hierarchical organization"
keywords = ["template", "dynamic", "hierarchy", "organization", "fasttrack"]
categories = ["template-engine", "web-programming"]

[[bin]]
name = "dynamic-template"
path = "src/main.rs"

[dependencies]
dynamic-template-proto = { workspace = true }
daw-proto = { workspace = true }
monarchy = { workspace = true }
color-palette = { workspace = true }
music-catalog = { workspace = true }
facet = { workspace = true }
roam = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
thiserror = { workspace = true }
anyhow = { workspace = true }

[features]
default = []

[lints]
workspace = true
